[package]
name = "sevendrl-2021"
version = "0.1.0"
authors = ["Max Whitney <mwhitney@alumni.sfu.ca>"]
edition = "2018"

[dependencies]
bracket-terminal = { git = "https://github.com/amethyst/bracket-lib", rev = "927d2292b5e74dd6ef16b46bc9e40c815c36c8a0" }
bracket-geometry = { git = "https://github.com/amethyst/bracket-lib", rev = "927d2292b5e74dd6ef16b46bc9e40c815c36c8a0", features = ["serde"] }
bracket-random = { git = "https://github.com/amethyst/bracket-lib", rev = "927d2292b5e74dd6ef16b46bc9e40c815c36c8a0" }
enum-map = { version = "0.6.4" }
serde = { version = "1.0.123", features = ["derive"] }
serde_cbor = { version = "^0.11" }
hecs = { version = "0.3.2", features=["serde"] }
log = { version = "^0.4" }
xdg = { version = "^2.2" }
textwrap = { version = "^0.13" }

[target.wasm32-unknown-unknown.dependencies]
web-sys = { version = "^0.3.48", features = ["Storage"] }
wasm-bindgen = { version = "0.2.71" }
